--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>freerange</title>
+    <script src="https://cdn.jsdelivr.net/npm/visualscript@0.0.3/dist/index.js"></script>
 </head>
 <body>
     <button>Get Range</button>
+    <visualscript-loader type=linear></visualscript-loader>
 </html>
 </body>
 <script src="dist/index.js" type="module"></script>
