Implemented file saving. Created new code editor demo

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
         <br/><br/>
 
-
         <visualscript-loader type=linear></visualscript-loader>
         <div id=controls></div>
+
+        <textarea></textarea>
 
         <h2>Range File</h2>
         <div id=editor>
