--- a/freerange-core/index.html
+++ b/freerange-core/index.html
@@ -3,13 +3,13 @@
 <html>
     <head>
         <!-- <script src="./dist/index.js"></script> -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/freerange@0.0.20"></script> -->
+        <!-- <script src="https://cdn.jsdelivr.net/npm/freerange@0.0.21"></script> -->
     </head>
     <body>  
         <button>Save Test Files</button>
     </body>
     <script type="module">
-        // import * as freerange from 'https://cdn.jsdelivr.net/npm/freerange/dist/index.esm.js'
+        // import * as freerange from 'https://cdn.jsdelivr.net/npm/freerange@0.0.21/dist/index.esm.js'
         import * as freerange from './dist/index.esm.js'
         const manager = new freerange.FileManager()
 
