--- a/freerange-core/index.html
+++ b/freerange-core/index.html
@@ -16,20 +16,28 @@
         document.querySelector('button').onclick = async () => {
             await manager.mount()
             const text = await manager.open('test.txt')
-            const textContents = await text.body
-            console.log('Existing Text', textContents)
-            text.body = 'Hello world'
+
+            // If Remote Filesystem Was Used...We Can't Create Files (yet)
+            if (text){
+                const textContents = await text.body
+                console.log('Existing Text', textContents)
+                text.body = 'Hello world'
+            }
 
 
             const json = await manager.open('test.json')
-            const jsonContents = await json.body
-            console.log('Existing JSON', jsonContents)
-            json.body = {key: 'value'}
+            if (json){
+                const jsonContents = await json.body
+                console.log('Existing JSON', jsonContents)
+                json.body = {key: 'value'}
+            }
 
             const csv = await manager.open('test.csv')
-            const csvContents = await csv.body
-            console.log('Existing CSV', csvContents)
-            csvContents.push({row: csvContents.length})
+            if (csv){
+                const csvContents = await csv.body
+                console.log('Existing CSV', csvContents)
+                csvContents.push({row: csvContents.length})
+            }
 
             await manager.save()
         }
